--- a/index.html
+++ b/index.html
@@ -1,2 +1,6 @@
-Hello world
-This is an additional text
+# Guessing game in bash
+
+This file was created on Tue Nov 21 14:03:14 CET 2023
+
+guessinggame.sh has 41
+ lines
